# branch-name-hook

./: .pre-commit-hooks.yaml  LICENSE  README.md  check_branch.sh  pyproject.toml  run-test-hook.sh
branch-name-hook/: branchcheck.py
