[tool.poetry]
name = "branch-name-hook"
version = "0.1.0"
description = "Brach name check pre-commit hook"
authors = ["Bence Komarniczky <niczky12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
